--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@root/request": "^1.4.2",
     "@types/axios": "^0.14.0",
     "@types/bent": "^7.0.1",
     "@types/body-parser": "^1.17.0",
